k8s/apps/home-automation/frigate/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frigate
  namespace: home-automation
spec:
  hosts:
    - 'cctv.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 5000
            host: frigate.home-automation.svc.cluster.local
          weight: 100
